knights (2.5.0-2) UNRELEASED; urgency=medium

  [ Pino Toscano ]
  * Fix typo in the description of knights-dbg. (Closes: #724819)
  * Remove menu file and its pixmap, as knights already provides a desktop
    file.

 -- Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>  Sun, 29 Nov 2015 12:11:57 +0100

knights (2.5.0-1) unstable; urgency=low

  * Team upload.
  * New upstream release.
  * Update knights.xpm.
  * Bump the kdelibs5-dev and libkdegames-dev build dependencies to 4.9,
    as required upstream.
  * Update Vcs-* headers.
  * Bump Standards-Version to 3.9.4, no changes required.

 -- Pino Toscano <pino@debian.org>  Sat, 20 Jul 2013 16:35:21 +0200

knights (2.4.2-1) experimental; urgency=low

  * New upstream release.
  * Delete load_right_default_theme.diff, applied upstream.
  * Bump debhelper compatibility level to 9.
  * Move sjeng from Suggests to Recommends.
  * Add stockfish to Recommends.
  * Add knights-dbg package.
  * Bump Standards-Version to 3.9.3; no changes needed.
  * Update copyright file.

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Wed, 12 Sep 2012 23:49:48 +0200

knights (2.3.2-1) unstable; urgency=low

  * New upstream release.
  * Add load_right_default_theme.diff to prevent issues when you have configured
    a theme that doesn't exist (may happen easily with obsolete themes).

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Mon, 30 May 2011 21:39:08 +0200

knights (2.3.1-2) experimental; urgency=low
 
  * Remove 02_no_hotnewstuff.diff since knights GHNS is suposed to work
    fine with KDE 4.6 libraries.
  * Bump kdelibs5-dev, libkdegames-dev build dependencies to 4.6 because of the
    patch mentioned in the previous changelog entry.
  * Bump Standards-Version to 3.9.2; no changes needed.

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Wed, 04 May 2011 21:10:20 +0200

knights (2.3.1-1) unstable; urgency=low

  * New upstream release.
  * Update patches: