@@ -3,7 +3,7 @@ Section: games
 Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: José Manuel Santamaría Lema <panfaust@gmail.com>
-Build-Depends: debhelper (>= 9.0.0~), cdbs, pkg-kde-tools, cmake,
+Build-Depends: debhelper (>= 9.0.0~), pkg-kde-tools, cmake,
  kdelibs5-dev (>> 4:4.9),
  libkdegames-dev (>> 4:4.9)
 Standards-Version: 3.9.4
