@@ -1,8 +1,12 @@
 #!/usr/bin/make -f
 
-DEB_KDE_LINK_WITH_AS_NEEDED := yes
-DEB_CMAKE_EXTRA_FLAGS += -DBIN_INSTALL_DIR=/usr/games
-DEB_DH_STRIP_ARGS = --dbg-package=knights-dbg
+export DEB_LDFLAGS_MAINT_APPEND := -Wl,--as-needed
 
-include /usr/share/pkg-kde-tools/makefiles/1/cdbs/kde.mk
-include /usr/share/cdbs/1/rules/debhelper.mk
+%:
+	dh $@ --parallel --with kde
+
+override_dh_auto_configure:
+	dh_auto_configure -- -DBIN_INSTALL_DIR=/usr/games
+
+override_dh_strip:
+	dh_strip --dbg-package=knights-dbg
