@@ -4,6 +4,10 @@ knights (2.5.0-2) UNRELEASED; urgency=medium
   * Fix typo in the description of knights-dbg. (Closes: #724819)
   * Remove menu file and its pixmap, as knights already provides a desktop
     file.
+  * Migrate to the dh sequencer:
+    - use the dh sequencer in rules, using the kde addon, with parallel build,
+      and in as-needed mode
+    - drop the cdbs build dependency
 
  -- Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>  Sun, 29 Nov 2015 12:11:57 +0100
 
